# diffusion

./: .gitignore  Diffusion_Models.md  README.md  dataset_manager.py  diffusion_trainer.py  experiment.py  forward_process.py  my_unet.py  pyproject.toml  run_as_configured.py  sinusoidal_position_embedding.py  train_diff.py  unet2_model.py  unet_model.py
config/: celebrity-diffusion.yaml  celebrity-gan.yaml
src/gen_ai_toolbox/: __init__.py
src/gen_ai_toolbox/datasets/: __init__.py  dataset_manager.py
src/gen_ai_toolbox/diffusion/: forward_process.py
src/gen_ai_toolbox/gan/: wgan_gp_trainer.py
src/gen_ai_toolbox/models/: __init__.py
src/gen_ai_toolbox/models/diffusion/: __init__.py  att_unet.py  simple_unet.py
src/gen_ai_toolbox/models/gan/: __init__.py  dcgan_models.py  gan_models.py
src/gen_ai_toolbox/models/utils/: __init__.py  block_attention.py
src/gen_ai_toolbox/training/: __init__.py  generative_model.py
src/gen_ai_toolbox/training/diffusion/: __init__.py  diffusion_model.py  noise_schedule.py
src/gen_ai_toolbox/training/gan/: __init__.py  wgan_gp_model.py  wgan_gp_trainer.py
src/gen_ai_toolbox/utils/: torch_context_managers.py  training_callback.py
